# VoidStrike

./: CMakeLists.txt  README.md
shaders/: pixel.hlsl  ui_vertex.hlsl  vertex.hlsl
src/: main.cpp
src/core/: Application.cpp  Application.h  Window.cpp  Window.h
src/game/: Enemy.cpp  Enemy.h  Game.cpp  Game.h  Map.cpp  Map.h  Player.cpp  Player.h  UI.cpp  UI.h
src/graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/input/: InputManager.cpp  InputManager.h
src/math/: Matrix4.h  Vector3.h
